--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -353,6 +353,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_cat_downloads">Downloads</string>
     <string name="pref_cat_autoupdate">Auto-update</string>
     <string name="pref_cat_cache">Cache</string>
+    <string name="pref_cat_about">About</string>
     <string name="pref_cat_proxy">Connection</string>
     <string name="pref_use_proxy">Proxy</string>
 	<string name="pref_use_proxy_summary">Use HTTP proxy</string>
@@ -418,6 +419,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_cache_maxsize_hint">0 - unlimited; 50 MB by default</string>
     <string name="pref_clear_cache_title">Clear cache</string>
     <string name="pref_clear_cache_summary">%.1f MB</string>
+    <string name="pref_about_updateapp_title">Overchan Android v%s</string>
+    <string name="pref_about_updateapp_summary">Check for Updates</string>
     <string name="pref_download_dir_title">Downloads directory</string>
     <string name="pref_download_dir_summary">The directory where files should be saved</string>
     <string name="pref_download_thumbs_title">Download thumbnails</string>
