--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -394,6 +394,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_cut_posts_title">Long posts</string>
     <string name="pref_cut_posts_summary">Cut long posts if they are longer than the specified value</string>
     <string name="pref_cut_posts_hint">0 - do not cut; 400px by default</string>
+    <string name="pref_open_spoilers_title">Open spoilers</string>
+    <string name="pref_open_spoilers_summary">Open text spoilers by default</string>
     <string name="pref_gallery_screen_title">Gallery</string>
     <string name="pref_gallery_screen_summary">Gallery advanced preferences</string>
     <string name="pref_gallery_scaleimageview_title">Image Viewer</string>
