--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -351,6 +351,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 	
 	<string name="mikuba_password_ignored">(игнорируется)</string>
 	
+	<string name="fourchan_prefs_new_recaptcha">Recaptcha 2.0</string>
+	<string name="fourchan_prefs_new_recaptcha_summary">Использовать новую версию Recaptcha</string>
+	
 	<string name="preferences">Настройки</string>
     <string name="pref_cat_chans">Настройки имиджборд</string>
     <string name="pref_cat_appearance">Внешний вид</string>
