--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -344,6 +344,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 	
 	<string name="mikuba_password_ignored">(ignored)</string>
 	
+	<string name="fourchan_prefs_new_recaptcha">Recaptcha 2.0</string>
+	<string name="fourchan_prefs_new_recaptcha_summary">Use the new version of Recaptcha</string>
+	
 	<string name="preferences">Preferences</string>
     <string name="pref_cat_chans">Imageboards</string>
     <string name="pref_cat_appearance">Appearance</string>
