--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -344,6 +344,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 	
 	<string name="mikuba_password_ignored">(ignored)</string>
 	
+	<string name="dobrochan_prefs_only_new_posts">Only new posts</string>
+	<string name="dobrochan_prefs_only_new_posts_summary">Load only new posts without reloading the whole thread</string>
+	<string name="dobrochan_prefs_domain">Domain</string>
+	<string name="dobrochan_prefs_domain_summary">Reserved domains: dobrochan.com, dobrochan.org, dobrochan.ru</string>
+	
 	<string name="fourchan_prefs_new_recaptcha">Recaptcha 2.0</string>
 	<string name="fourchan_prefs_new_recaptcha_summary">Use the new version of Recaptcha</string>
 	
