--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -349,6 +349,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="dobrochan_prefs_domain">Domain</string>
     <string name="dobrochan_prefs_domain_summary">Reserved domains: dobrochan.com, dobrochan.org, dobrochan.ru</string>
     
+    <string name="infinity_tor_message">To post on 8chan over Tor, you must use the .onion domain.</string>
+    
     <string name="fourchan_prefs_new_recaptcha">Recaptcha 2.0</string>
     <string name="fourchan_prefs_new_recaptcha_summary">Use the new version of Recaptcha</string>
     
