--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -351,6 +351,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     
     <string name="infinity_tor_message">To post on 8chan over Tor, you must use the .onion domain.</string>
     
+    <string name="inach_prefs_ajax_update">JSON Update</string>
+    <string name="inach_prefs_ajax_update_summary">Load only new posts without reloading the whole thread</string>
+    
     <string name="fourchan_prefs_new_recaptcha">Recaptcha 2.0</string>
     <string name="fourchan_prefs_new_recaptcha_summary">Use the new version of Recaptcha</string>
     
