--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -305,6 +305,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="autohide_error_empty_regex">Empty regular expression</string>
     <string name="autohide_error_incorrect_regex">Incorrect regular expression</string>
     
+    <string name="app_update_checking">Checking for updates</string>
+    <string name="app_update_update_available">Update available</string>
+    <string name="app_update_update_dialog_text">New version is available: %s\n\nDo you want to open the site?</string>
+    <string name="app_update_update_not_required">No update required</string>
+    <string name="app_update_update_error">Cannot check for updates</string>
+    
     <string name="notification_url_copied">Address is copied to the clipboard\n%s</string>
     <string name="notification_post_not_found">The post isn\'t found</string>
     <string name="notification_comment_copied">Message is copied to the clipboard</string>
